@@ -10,10 +10,12 @@ lilv (0.19.0) unstable;
     (useful for porting plugins bridges with NASPRO)
   * Fix issues with lilv_plugin_get_author_name and friends
     (thanks Filipe Coelho)
+  * Improved/working lv2_apply.py to apply plugin to a .wav
+    (thanks Joe Button)
   * Fix several minor memory leaks
   * Improve test coverage
 
- -- David Robillard <d@drobilla.net>  Sat, 12 Jul 2014 15:45:00 -0400
+ -- David Robillard <d@drobilla.net>  Sat, 12 Jul 2014 22:42:56 -0400
 
 lilv (0.18.0) stable;
 
